karaage_asserts/tests/codes/fail.stderr
error[E0277]: the trait bound `Empty: Clone` is not satisfied
 --> tests/codes/fail.rs:6:18
  |
6 |     assert_impl!(Empty<Clone, Copy>);
  |                  ^^^^^ the trait `Clone` is not implemented for `Empty`
  |
note: required by a bound in `assert_impl_clone`
 --> tests/codes/fail.rs:6:24
  |
6 |     assert_impl!(Empty<Clone, Copy>);
  |     -------------------^^^^^--------
  |     |                  |
  |     |                  required by this bound in `assert_impl_clone`
  |     required by a bound in this

error[E0277]: the trait bound `Empty: Copy` is not satisfied
 --> tests/codes/fail.rs:6:18
  |
6 |     assert_impl!(Empty<Clone, Copy>);
  |                  ^^^^^ the trait `Copy` is not implemented for `Empty`
  |
note: required by a bound in `assert_impl_copy`
 --> tests/codes/fail.rs:6:31
  |
6 |     assert_impl!(Empty<Clone, Copy>);
  |     --------------------------^^^^--
  |     |                         |
  |     |                         required by this bound in `assert_impl_copy`
  |     required by a bound in this

error[E0308]: mismatched types
 --> tests/codes/fail.rs:7:5
  |
7 |     assert_iter_eq!(Vec::<usize>::new(), Vec::<String>::new());
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found struct `String`
  |
  = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: can't compare `usize` with `String`
 --> tests/codes/fail.rs:7:5
  |
7 |     assert_iter_eq!(Vec::<usize>::new(), Vec::<String>::new());
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no implementation for `usize == String`
  |
  = help: the trait `PartialEq<String>` is not implemented for `usize`
  = note: required because of the requirements on the impl of `PartialEq<Vec<String>>` for `Vec<usize>`
  = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: can't compare `usize` with `String`
 --> tests/codes/fail.rs:8:5
  |
8 |     assert_iter_ne!(Vec::<usize>::new(), Vec::<String>::new());
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no implementation for `usize == String`
  |
  = help: the trait `PartialEq<String>` is not implemented for `usize`
  = note: required because of the requirements on the impl of `PartialEq<Vec<String>>` for `Vec<usize>`
  = note: this error originates in the macro `assert_ne` (in Nightly builds, run with -Z macro-backtrace for more info)
